--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ classifiers =
 [options]
 python_requires = >=3.10
 packages = find:
-install_requires =
+install_requires = file: requirements.txt
 
 [options.packages.find]
 exclude=
