--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
       - id: copyright-license-disclaimer
         args: ["--license=Apache License 2.0", "--owner=Intel Corporation"]
       - id: sigoptlint-python
+        args: [--include=NoImportLibsigoptComputeRule]
   - repo: https://github.com/PyCQA/isort.git
     rev: "5.12.0"
     hooks:
