--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ on:
   push: {}
 jobs:
   pylint:
-    runs-on: python:3.10-bookworm
+    runs-on: python:3.11-alpine
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
