--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - run: pip install --upgrade pip setuptools
       - run: pip install . -r requirements-dev.txt
       - run: git ls-files '*.py' | xargs pylint --output-format=text -sn
